@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-22T08:12:04Z",
-  "count_outdated" : 996,
-  "uniques_outdated" : 630,
+  "timestamp" : "2023-09-22T16:11:25Z",
+  "count_outdated" : 998,
+  "uniques_outdated" : 631,
   "count" : 1018,
   "uniques" : 646,
   "clones" : [
-    {
-      "timestamp": "2023-09-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-09T00:00:00Z",
       "count": 3,
