@@ -1,3 +1,12 @@
+2023-09-22T16:11:25Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6276598391 # 1184
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-22
+* notice: last 14d: unq all: 3 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 630 996 / 646 1018
+* notice: next accum: outdated-unq outdated-all / unq all: 631 998 / 646 1018
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-09-08] / []
+
 2023-09-22T08:12:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6271783540 # 1183
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-22
